fix alignment

--- a/styles/login.css
+++ b/styles/login.css
@@ -20,7 +20,7 @@ header {
     width: 100%;
 }
 
-.left-header img {
+#nutrimeal-logo {
     height: 40px;
     mix-blend-mode: multiply;
     margin-right: 5px;
@@ -93,6 +93,15 @@ header {
     margin-right: 40px;
 }
 
+#email-error, #password-error {
+    font-size: 14px;
+    font-weight: lighter;
+    margin-top: 10px;
+    margin-left: 20px;
+    color: red;
+    display: none;
+}
+
 .input-container input {
     width: 100%;
     height: 30px;
@@ -134,6 +143,11 @@ header {
     font-weight: bold;
     text-align: center;
     cursor: pointer;
+    transition: .5s;
+}
+
+#lower-login button:hover {
+    background-color: #ebbe0a;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -148,4 +162,50 @@ header {
         margin-bottom: 40px;
     }
     
+}
+
+.how-it-work, .what-others-say, .contact-us {
+    border-bottom: 2px solid rgb(170, 169, 169);
+    padding-bottom: 40px;
+}
+
+.how-it-work img, .what-others-say img {
+    width: 100px;
+    height: 100px;
+}
+
+.how-it-work h2 {
+    border-top: 2px solid rgb(170, 169, 169);
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
+.what-others-say h2 {
+    margin-top: 40px;
+}
+
+.contact-us {
+    padding-left: 40px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;    
+}
+
+.contact-us img {
+    width: 20px;
+    height: 20px;
+}
+
+footer {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-info {
+    font-size: 14px;
+    color: lightgray;
+    text-decoration: underline;
+    margin-left: 30px;
 }
